src/styles.css
* {
    box-sizing: border-box;
    font-family: "Roboto", sans-serif;
    margin: 0;
}

:root {
    --edge-radius: 12px;
}

body, html{
    background-image: url(https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
    background-position: 0px -200px;
}

.flex-container {
    display: flex;
}

.grid-container {
    display: grid;
}

#main-page {
    flex-direction: column;
    align-items: center;
}

#nav-container {
    gap: 70px;
    height: 110px;
}

@keyframes slide {
    from {
    height: 1.5em;
    padding-top: var(--vert-padding);
    background-color: #FED08B;
    }

    to {
    height: 2em;
    padding-top: calc(var(--vert-padding) + .5em);
    background-color: #ffdfb2;
    }
}

@keyframes slide-back {
    from {
    height: 2em;
    padding-top: calc(var(--vert-padding) + .5em);
    background-color: #ffdfb2;
    }

    to {
    height: 1.5em;
    padding-top: var(--vert-padding);
    background-color: #FED08B;
    }
}

.nav-option {
    --vert-padding: 5px;
    font-size: 3em;
    width: 6em;
    height: 1.5em;
    background-color: #FED08B;
    padding-top: var(--vert-padding);
    padding-bottom: var(--vert-padding);
    border-bottom-left-radius: var(--edge-radius);
    border-bottom-right-radius: var(--edge-radius);
}

.nav-animation {
    animation: slide-back .5s forwards;
}

nav button:hover {
    animation: slide .5s forwards;
}

#title-banner {
    font-size: 6em;
    background-color: rgba(254,208,139, .9);
    width: 100%;
    height: 150px;
    text-align: center;
    padding-top: 16px;
    margin-top: 60px;
    margin-bottom: 60px;
}

#content {
    width: 1000px;
    background-color: #FED08B;
    border: black solid;
    border-radius: var(--edge-radius);
    flex-direction: column;
    align-items: center;
    padding-top: 15px;
    padding-bottom: 15px;
}

#home-tag {
    font-size: 3em;
    font-weight: 600;
}

#address {
    font-size: 1.5em;
    margin-top: 10px;
}

#hours-p {
    margin-top: 10px;
    font-size: 2em;
    font-weight: 400;
}

#hours-table {
    grid-template-columns: 1fr 1fr;
    margin-bottom: 20px;
    border-radius: var(--edge-radius);
    box-shadow: 0px 5px 10px grey;
}

.hours-entry {
    font-size: 2em;
    width: 300px;
    text-align: center;
    border: solid black;
}

#sunday {
    border-top-left-radius: var(--edge-radius);
}

#sunday-hours {
    border-top-right-radius: var(--edge-radius);
}

#saturday {
    border-bottom-left-radius: var(--edge-radius);
}

#saturday-hours {
    border-bottom-right-radius: var(--edge-radius);
}

#menu-title {
    font-size: 3em;
    margin-bottom: 20px;
}

.menu-img {
    height: 200px;
    width: 250px;
    object-fit: cover;
    border-right: solid black;
}

.menu-item-container {
    border: solid black;
    border-radius: var(--edge-radius);
    width: 800px;
    padding-right: 3px;
    box-shadow: 0px 5px 10px grey;
    overflow: hidden;
}

#menu-container, .menu-text-container {
    flex-direction: column;
}

#menu-container {
    gap: 20px;
}

.menu-text-container {
    padding: 15px;
    width: 600px;
}

.menu-name-container{
    margin-bottom: 10px;
}

.menu-name, .menu-price {
    font-size: 2em;
}

.menu-price {
    margin-left: auto;
}

.menu-details {
    font-size: 1em;
}

